# esp32-2eth

./: .editorconfig  .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  SKILL.md  idf_component.yml  sdkconfig.defaults
components/device_config/: CMakeLists.txt  device_config.c
components/device_config/include/: device_config.h
components/doppler_events/: CMakeLists.txt  doppler_events.c
components/doppler_events/include/: doppler_events.h
components/doppler_processing/: CMakeLists.txt  doppler_processing.c
components/doppler_processing/include/: doppler_processing.h
components/eth_w5500/: CMakeLists.txt  eth_w5500.c
components/eth_w5500/include/: eth_w5500.h
components/mqtt_app/: CMakeLists.txt  mqtt_app.c
components/mqtt_app/certs/: .gitignore  ca.crt  client.crt  client.key
components/mqtt_app/include/: mqtt_app.h
components/proxy_events/: CMakeLists.txt  proxy_events.c
components/proxy_events/include/: proxy_events.h
components/tcp_client_app/: CMakeLists.txt  tcp_client_app.c
components/tcp_client_app/include/: tcp_client_app.h
components/tcp_server_app/: CMakeLists.txt  tcp_server_app.c
components/tcp_server_app/include/: tcp_server_app.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_test.c  app_test1.c  esp_eth_mac_w5500.h  idf_component.yml
mosquitto/: acl.example  mosquitto.conf.example
scripts/: generate_certs.sh  generate_client_cert.sh
